projects/igniteui-angular/button-group/src/button-group/themes/_base.scss
/* stylelint-disable max-nesting-depth */
@use 'igniteui-theming/sass/bem' as *;
@use 'igniteui-theming/sass/themes' as *;
@use 'igniteui-theming/sass/typography' as *;
@use '../../../../core/src/core/styles/themes/scoping' as *;
@use 'igniteui-theming/sass/themes/schemas/components/light/button-group' as *;

$_theme: digest-schema($material-button-group);

@include layer(base) {
    @include b(igx-button-group) {
        --item-min-width: #{rem(42px)};
        --ig-icon-size: #{rem(18px)};
        --z-item-elevated: 2;

        display: flex;
        box-shadow: var-get($_theme, 'elevation');
        border-radius: var-get($_theme, 'border-radius');

        button {
            // The margin here is required to fix a bug in Safari #7858
            margin-top: 0;
            margin-inline-end: 0;
            margin-bottom: 0;
        }

        @include e(item) {
            @include type-style(button) {
                text-align: center;
            }

            border: rem(1px) solid var-get($_theme, 'item-border-color');
            color: var-get($_theme, 'item-text-color');
            background: var-get($_theme, 'item-background');
            min-width: var(--item-min-width);
            display: flex;
            flex: 1 0 0%;
            justify-content: center;
            align-items: center;
            text-decoration: none;
            cursor: pointer;
            user-select: none;
            position: relative;
            z-index: 0;

            igx-icon {
                color: var-get($_theme, 'item-icon-color');
            }

            &:hover {
                z-index: 1;
                color: var-get($_theme, 'item-hover-text-color');
                background: var-get($_theme, 'item-hover-background');
                border-color: var-get($_theme, 'item-hover-border-color');

                igx-icon {
                    color: var-get($_theme, 'item-hover-icon-color');
                }
            }

            &:active {
                z-index: var(--z-item-elevated);
                color: var-get($_theme, 'item-hover-text-color');
                background: var-get($_theme, 'item-active-background');
                border-color: var-get($_theme, 'item-active-border-color');

                igx-icon {
                    color: var-get($_theme, 'item-hover-icon-color');
                }
            }

            &[igxButton] {
                border-radius: 0;
            }

            &[igxButton][disabled='true'] {
                color: var-get($_theme, 'disabled-text-color');
                background: var-get($_theme, 'disabled-background-color');
                border-color: var-get($_theme, 'item-disabled-border');

                igx-icon {
                    color: var-get($_theme, 'disabled-text-color');
                }
            }

            &[igxButton].igx-button--focused {
                z-index: var(--z-item-elevated);
                color: var-get($_theme, 'item-focused-text-color');
                background: var-get($_theme, 'item-focused-background');
                border-color: var-get($_theme, 'item-focused-border-color');

                igx-icon {
                    color: var-get($_theme, 'item-focused-text-color');
                }

                &:hover {
                    background: var-get($_theme, 'item-focused-hover-background');
                    border-color: var-get($_theme, 'item-focused-hover-border-color');
                    color: var-get($_theme, 'item-focused-hover-text-color');

                    igx-icon {
                        color: var-get($_theme, 'item-focused-hover-text-color');
                    }
                }

                &:active {
                    background: var-get($_theme, 'item-active-background');
                    border-color: var-get($_theme, 'item-active-border-color');
                    color: var-get($_theme, 'item-focused-hover-text-color');

                    igx-icon {
                        color: var-get($_theme, 'item-focused-hover-text-color');
                    }
                }
            }

            &:not(:nth-child(1)) {
                margin-inline-start: rem(-1px);
            }

            &:first-of-type {
                border-start-start-radius: inherit;
                border-end-start-radius: inherit;
            }

            &:last-of-type {
                border-start-end-radius: inherit;
                border-end-end-radius: inherit;
            }
        }

        @include e(item, $m: selected) {
            color: var-get($_theme, 'item-selected-text-color');
            background: var-get($_theme, 'item-selected-background');
            border-color: var-get($_theme, 'item-selected-border-color');
            position: relative;
            z-index: calc(var(--z-item-elevated) + 1);

            &[igxButton] {
                border-color: var-get($_theme, 'item-selected-border-color');
            }

            igx-icon {
                color: var-get($_theme, 'item-selected-icon-color');
            }

            &:hover {
                border-color: var-get($_theme, 'item-selected-hover-border-color');
                color: var-get($_theme, 'item-selected-hover-text-color');
                background: var-get($_theme, 'item-selected-hover-background');

                igx-icon {
                    color: var-get($_theme, 'item-selected-hover-icon-color');
                }
            }

            &:active {
                border-color: var-get($_theme, 'item-selected-active-border-color');
                color: var-get($_theme, 'item-selected-hover-text-color');
                background: var-get($_theme, 'item-selected-active-background');

                igx-icon {
                    color: var-get($_theme, 'item-selected-hover-icon-color');
                }
            }

            &[igxButton].igx-button--focused {
                background: var-get($_theme, 'item-selected-focus-background');
                border-color: var-get($_theme, 'item-selected-hover-border-color');
                color: var-get($_theme, 'item-selected-text-color');

                igx-icon {
                    color: var-get($_theme, 'item-selected-icon-color');
                }

                &:hover {
                    color: var-get($_theme, 'item-selected-hover-text-color');
                    background: var-get($_theme, 'item-selected-focus-hover-background');
                    border-color: var-get($_theme, 'item-selected-border-color');

                    igx-icon {
                        color: var-get($_theme, 'item-selected-hover-icon-color');
                    }
                }

                &:active {
                    background: var-get($_theme, 'item-selected-active-background');
                    color: var-get($_theme, 'item-selected-hover-text-color');
                    border-color: var-get($_theme, 'item-selected-active-border-color');

                    igx-icon {
                        color: var-get($_theme, 'item-selected-hover-icon-color');
                    }
                }
            }

            &[igxButton][disabled='true'] {
                color: var-get($_theme, 'disabled-selected-text-color');
                background: var-get($_theme, 'disabled-selected-background');
                border-color: var-get($_theme, 'disabled-selected-border-color');

                igx-icon {
                    color: var-get($_theme, 'disabled-selected-icon-color');
                }
            }
        }

        @include e(item-content) {
            display: flex;
            align-items: center;
            flex-flow: row nowrap;
            min-width: 0;

            * ~ * {
                margin-inline-start: rem(10px, 16px);
            }
        }

        @include e(button-text) {
            @include ellipsis();

            width: 100%;
        }

        @include m(vertical) {
            flex-flow: column;

            @include e(item) {
                // in case the display of the group is set to inline-block and the group hase a width,
                // the items need to have width 100% to fill the group container
                width: 100%;

                &:not(:nth-child(1)) {
                    margin-top: rem(-1px) !important;
                    margin-inline-start: 0;
                }

                &:first-of-type {
                    border-start-start-radius: inherit;
                    border-start-end-radius: inherit;
                    border-end-start-radius: 0;
                    border-end-end-radius: 0;
                }

                &:last-of-type {
                    border-start-start-radius: 0;
                    border-start-end-radius: 0;
                    border-end-start-radius: inherit;
                    border-end-end-radius: inherit;
                }
            }
        }
    }
}

